fix scrollbar corner color in webkit based webview

--- a/src/index.css
+++ b/src/index.css
@@ -177,6 +177,10 @@
     border-radius: var(--radius-md);
   }
 
+  ::-webkit-scrollbar-corner {
+      background: var(--color-background);
+  }
+
   :root {
     font-family:
       Geist,
